# NF_001

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
data/: _reachability.json
data/local_articles/: Water_Reform__New_South_Wales__test-sources.txt  Water_Reform__New_South_Wales__url.txt  Water_Reform__Victoria__melbourne-water-regulation.html  Water_Rights__Queensland__messy-unstructured-article.html  sources.yaml
docs/: pipeline_flow.md  source-reachability.md
outputs/2026-04-22/: Water_Newsfeed.docx  Water_Newsfeed.md  Water_Newsfeed_224404.docx  horizon_payload.json
outputs/2026-04-23/: Water_Newsfeed.docx  Water_Newsfeed.md  Water_Newsfeed_143724.docx  horizon_payload.json  ~$ter_Newsfeed.docx
outputs/2026-04-24/: Water_Newsfeed.docx  Water_Newsfeed.md  horizon_payload.json
reference001/reference/: Water_Newsfeed.md  Water_Newsfeed_Template.md
scripts/: list_bedrock_models.py  run_pipeline.py
src/newsfeed/: __init__.py  config.py  db.py  llm_client.py  schemas.py  stage0_parse_template.py  stage11_render.py  stage12_publish.py  stage1_discovery.py  stage3_dedup.py  stage4_fetch.py  stage5_relevance.py  stage6_classify.py  stage7_draft.py  stage8_validate.py  stage9_assemble.py  structured_extract.py
src/newsfeed/prompts/: classify_v1.j2  draft_v1.j2  relevance_v1.j2
src/newsfeed/templates/: bullet_list.j2  gazette_bundle.j2  media_release.j2  new_plan.j2  simple_update.j2  weekly_report.j2
tests/: conftest.py
tests/fixtures/: sample_article.html  sample_listing.html  sample_rss.xml  sample_sitemap.xml  simple_template.md
tests/unit/: test_scaffold.py  test_stage0_parse_template.py  test_stage11_render.py  test_stage12_publish.py  test_stage1_discovery.py  test_stage3_dedup.py  test_stage4_fetch.py  test_stage5_relevance.py  test_stage6_classify.py  test_stage7_draft.py  test_stage8_validate.py  test_stage9_assemble.py
ui/: streamlit_app.py
